# WhisperLiveKit

./: pyproject.toml
whisperlivekit/: audio_processor.py
whisperlivekit/audio_sources/: __init__.py  system_audio.py
